# SI

./: .gitignore
00-misc/: getgooglehomepage.sh  script.sh  time_and_date_edge_cases.txt  week-2-grubler.txt
01-file-format-bonanza/javascript/: package-lock.json  package.json  script.js  tsconfig.json
01-file-format-bonanza/python/: encoding.py  script.py
01-file-format-bonanza/test-files/: test.txt
01-modules/html_module/: myModule.js
01-modules/html_no_module/: index.html
01-modules/python/: main.py
02-data-formats/node/: index.js  package-lock.json  package.json
02-data-formats/python/: main.py  pyproject.toml  script.py
02-data-formats/python/test-files/: test.csv
02-data-formats/test-files/: test.json
03-python-environments/: README.md
03-python-environments/testpoetry/: README.md  main.py  pyproject.toml
04-basic-servers/node/: .eslintrc.js  app.js  app.ts  fileParser.js  package-lock.json  package.json
04-basic-servers/python/: fileParser.py  main.py  pyproject.toml
04-basic-servers/python/test-files/: test.xml
04-basic-servers/test-files/: test.yml
05-date/node/: index.js
05-date/python/: main.py
06-server-to-server/node/: app.js  package.json
06-server-to-server/python/: main.py  pyproject.toml
07-dotenv/node/: .env.example  index.js  package-lock.json  package.json
07-dotenv/python/: .env.example  main.py  pyproject.toml
08-database-documentation/: exposed-db-documentation.txt  how-to-backup.txt
08-database-documentation/backup/: backup.sql  dbdump.sql
09-Open-API/node/: app.js  package-lock.json  package.json
09-Open-API/python/: main.py  pyproject.toml
09-Open-API/python/routers/: __init__.py  astronaut.py  spacecraft.py
12-server-sent-events/node/: app.js
12-server-sent-events/python/: main.py  pyproject.toml
13-github-webhooks/node/: app.js
13-github-webhooks/python/: main.py  (+1 more)
16-CORS/: index.html
17-multipart-forms/: index.html
18-redis/: dump.rdb
22-azure/: vm.txt
SMS_Integration/: index.html
(+100 files in other folders)
