[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["Michael Fuglø <michael@fuglo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"
xmltodict = "^0.13.0"

[tool.poetry.scripts]
my-script = "python.script:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
