[tool.poetry]
name = "testpoetry"
version = "0.1.0"
description = ""
authors = ["Michael Fuglø <michael@fuglo.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
emoji = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
