[tool.poetry]
name = "server-to-server"
version = "0.1.0"
description = ""
authors = ["Michael Fuglø <michael@fuglo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.92.0"
requests = "^2.28.2"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
